--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@angular/cli": "~16.0.1",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "gulp": "^4.0.2",
+    "gulp-inline": "^0.1.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
